2008-02-10  Vincent Untz  <vuntz@gnome.org>

	Continue gio port...

	* menu.c: (drag_data_get_menu_cb): simplify with g_filename_to_uri()
	* panel.c: (drop_urilist): port the function to gio

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	Port menu.c to gio.
	Based on patch by Diego Escalante Urrelo <diegoe@gnome.org>
	Fix part of bug #509756.

	* menu.c: (add_app_to_desktop): straight port
	(drag_data_get_menu_cb): ditto

2008-02-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* panel-toplevel.c: (panel_toplevel_expose):
	Fix bug #497998. This correct the orientation of the panel handles.

==================== 2.21.90 ====================

2008-01-29  Elijah Newren  <newren gnome org>

	* xstuff.c: (get_typed_property_data):
	Fix G_STRFUNC usage so that it compiles.

2008-01-28  Christian Persch  <chpe@gnome.org>

	* xstuff.c: (get_typed_property_data): 
	Use G_STRFUNC instead of the deprecated G_GNUC_FUNCTION.

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* panel-logout.c: (panel_logout_timeout): if the name of the user is
	"Unknown", then display the login name.
	Fix bug #509129, based on patch by Martin Schoen
	<martin_schoen@gmx.de>

==================== 2.21.5 ====================

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

2007-09-18  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: revert the previous commit: it breaks some icon
	themes. We'll give some time to the authors to fix their themes, and
	use the new icon name in 2.22.

==================== 2.20.0 ====================

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* panel-icon-names.h: use new icon name for logout.
	Patch by Luca Ferretti <elle.uca@libero.it>
	Fix bug #472254

2007-09-11  Ray Strode  <rstrode@redhat.com>

	* panel-toplevel.c: (panel_toplevel_attach_to_widget): 
	fix typo in previous commit.

2007-09-11  Ray Strode  <rstrode@redhat.com>

	* panel-toplevel.c: (panel_toplevel_attach_to_widget): 