@@ -1,5 +1,12 @@
 2008-02-10  Vincent Untz  <vuntz@gnome.org>
 
+	Lalalala. gio port. Lalalala.
+
+	* gnome-desktop-item-edit.c: (get_uri): killed
+	(main): straight port, really easy.
+
+2008-02-10  Vincent Untz  <vuntz@gnome.org>
+
 	Continue gio port...
 
 	* menu.c: (drag_data_get_menu_cb): simplify with g_filename_to_uri()
